--- a/In4B00king/economyhall.ui
+++ b/In4B00king/economyhall.ui
@@ -141,7 +141,7 @@
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton">
+  <widget class="QPushButton" name="book">
    <property name="geometry">
     <rect>
      <x>500</x>
