--- a/In4B00king/economyselection.ui
+++ b/In4B00king/economyselection.ui
@@ -42,7 +42,7 @@
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
-  <widget class="QComboBox" name="comboBox">
+  <widget class="QComboBox" name="sselection">
    <property name="geometry">
     <rect>
      <x>100</x>
