--- a/In4B00king/economyhall.ui
+++ b/In4B00king/economyhall.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Economy Hall</string>
   </property>
   <widget class="QLabel" name="sc2">
    <property name="geometry">
