--- a/In4B00king/diamondhall.ui
+++ b/In4B00king/diamondhall.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Diamond Hall</string>
   </property>
   <widget class="QLabel" name="sc5">
    <property name="geometry">
