Last known commit (Ashley @ 5:23 PM)
Also removed test.db

--- a/In4B00king/movielist.ui
+++ b/In4B00king/movielist.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Mainpage2</class>
- <widget class="QMainWindow" name="Mainpage2">
+ <class>MovieList</class>
+ <widget class="QMainWindow" name="MovieList">
   <property name="geometry">
    <rect>
     <x>0</x>
