--- a/In4B00king/login.ui
+++ b/In4B00king/login.ui
@@ -20,7 +20,7 @@
       <x>220</x>
       <y>70</y>
       <width>241</width>
-      <height>181</height>
+      <height>211</height>
      </rect>
     </property>
     <property name="title">
@@ -59,6 +59,13 @@
       <widget class="QPushButton" name="pushButton">
        <property name="text">
         <string>Login</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="Register">
+       <property name="text">
+        <string>Register</string>
        </property>
       </widget>
      </item>
