--- a/In4B00king/confirmation.ui
+++ b/In4B00king/confirmation.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>confirmation</class>
- <widget class="QDialog" name="confirmation">
+ <class>Confirmation</class>
+ <widget class="QDialog" name="Confirmation">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -13,17 +13,27 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QDialogButtonBox" name="buttonBox">
+  <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>180</y>
-     <width>193</width>
-     <height>28</height>
+     <x>110</x>
+     <y>80</y>
+     <width>171</width>
+     <height>131</height>
     </rect>
    </property>
-   <property name="standardButtons">
-    <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+   <property name="text">
+    <string>You have chosen:</string>
+   </property>
+  </widget>
+  <widget class="QTextEdit" name="userInput">
+   <property name="geometry">
+    <rect>
+     <x>210</x>
+     <y>100</y>
+     <width>104</width>
+     <height>87</height>
+    </rect>
    </property>
   </widget>
  </widget>
