--- a/In4B00king/register.ui
+++ b/In4B00king/register.ui
@@ -230,6 +230,16 @@
       </property>
      </widget>
     </item>
+    <item>
+     <widget class="QPushButton" name="verifyBtn_2">
+      <property name="text">
+       <string>Back</string>
+      </property>
+      <property name="autoDefault">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
  </widget>
