--- a/In4B00king/movielist.ui
+++ b/In4B00king/movielist.ui
@@ -18,7 +18,7 @@
     <property name="geometry">
      <rect>
       <x>280</x>
-      <y>0</y>
+      <y>20</y>
       <width>231</width>
       <height>41</height>
      </rect>
@@ -47,7 +47,7 @@
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>40</y>
+      <y>70</y>
       <width>791</width>
       <height>451</height>
      </rect>
@@ -228,8 +228,8 @@
    <widget class="QPushButton" name="Edit_Profile">
     <property name="geometry">
      <rect>
-      <x>710</x>
-      <y>10</y>
+      <x>10</x>
+      <y>40</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -242,7 +242,7 @@
     <property name="geometry">
      <rect>
       <x>80</x>
-      <y>490</y>
+      <y>520</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -255,7 +255,7 @@
     <property name="geometry">
      <rect>
       <x>360</x>
-      <y>490</y>
+      <y>520</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -268,13 +268,26 @@
     <property name="geometry">
      <rect>
       <x>630</x>
-      <y>490</y>
+      <y>520</y>
       <width>75</width>
       <height>23</height>
      </rect>
     </property>
     <property name="text">
      <string>Select</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="profile">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>10</y>
+      <width>221</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;right&quot;&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
    </widget>
    <zorder>Background</zorder>
@@ -284,6 +297,7 @@
    <zorder>Select_Button1</zorder>
    <zorder>Select_Button2</zorder>
    <zorder>Select_Button3</zorder>
+   <zorder>profile</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
