--- a/In4B00king/editprofile.ui
+++ b/In4B00king/editprofile.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>758</width>
-    <height>446</height>
+    <width>719</width>
+    <height>414</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,8 +16,8 @@
   <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>30</y>
+     <x>0</x>
+     <y>0</y>
      <width>351</width>
      <height>381</height>
     </rect>
@@ -26,30 +26,6 @@
     <string>Edit Profile</string>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
-    <item>
-     <layout class="QHBoxLayout" name="horizontalLayout">
-      <item>
-       <widget class="QLabel" name="label">
-        <property name="text">
-         <string>Email</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLineEdit" name="Email">
-        <property name="maximumSize">
-         <size>
-          <width>459</width>
-          <height>16777215</height>
-         </size>
-        </property>
-        <property name="text">
-         <string/>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </item>
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_3">
       <item>
@@ -136,6 +112,30 @@
      </layout>
     </item>
     <item>
+     <layout class="QHBoxLayout" name="horizontalLayout_7">
+      <item>
+       <widget class="QLabel" name="label_6">
+        <property name="text">
+         <string>About</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="about">
+        <property name="maximumSize">
+         <size>
+          <width>437</width>
+          <height>16777215</height>
+         </size>
+        </property>
+        <property name="echoMode">
+         <enum>QLineEdit::Normal</enum>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
+    <item>
      <layout class="QHBoxLayout" name="horizontalLayout_2">
       <item>
        <widget class="QLabel" name="label_2">
@@ -145,7 +145,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QLineEdit" name="Password">
+       <widget class="QLineEdit" name="cpwd">
         <property name="maximumSize">
          <size>
           <width>437</width>
@@ -160,7 +160,7 @@
      </layout>
     </item>
     <item>
-     <widget class="QPushButton" name="Register_2">
+     <widget class="QPushButton" name="profilechange">
       <property name="text">
        <string>Confirm</string>
       </property>
@@ -168,26 +168,26 @@
     </item>
    </layout>
   </widget>
-  <widget class="QPushButton" name="Register_3">
+  <widget class="QPushButton" name="Close">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>410</y>
+     <x>10</x>
+     <y>380</y>
      <width>701</width>
      <height>23</height>
     </rect>
    </property>
    <property name="text">
-    <string>Confirm</string>
+    <string>Close</string>
    </property>
   </widget>
   <widget class="QGroupBox" name="groupBox_2">
    <property name="geometry">
     <rect>
-     <x>380</x>
-     <y>30</y>
+     <x>350</x>
+     <y>70</y>
      <width>351</width>
-     <height>381</height>
+     <height>221</height>
     </rect>
    </property>
    <property name="title">
@@ -195,21 +195,48 @@
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_2">
     <item>
-     <layout class="QHBoxLayout" name="horizontalLayout_8">
+     <layout class="QHBoxLayout" name="horizontalLayout_10">
       <item>
-       <widget class="QLabel" name="label_8">
+       <widget class="QLabel" name="label_10">
         <property name="text">
-         <string>First Name</string>
+         <string>Current Password</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QLineEdit" name="Fname_2">
+       <widget class="QLineEdit" name="cpwd2">
         <property name="maximumSize">
          <size>
           <width>432</width>
           <height>16777215</height>
          </size>
+        </property>
+        <property name="echoMode">
+         <enum>QLineEdit::Password</enum>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
+    <item>
+     <layout class="QHBoxLayout" name="horizontalLayout_8">
+      <item>
+       <widget class="QLabel" name="label_8">
+        <property name="text">
+         <string>New Password</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="npwd">
+        <property name="maximumSize">
+         <size>
+          <width>432</width>
+          <height>16777215</height>
+         </size>
+        </property>
+        <property name="echoMode">
+         <enum>QLineEdit::Password</enum>
         </property>
        </widget>
       </item>
@@ -220,79 +247,15 @@
       <item>
        <widget class="QLabel" name="label_9">
         <property name="text">
-         <string>Last Name</string>
+         <string>Confirm New Password</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QLineEdit" name="Lname_2">
+       <widget class="QLineEdit" name="cnpwd">
         <property name="maximumSize">
          <size>
           <width>433</width>
-          <height>16777215</height>
-         </size>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </item>
-    <item>
-     <layout class="QHBoxLayout" name="horizontalLayout_10">
-      <item>
-       <widget class="QLabel" name="label_10">
-        <property name="text">
-         <string>Age</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QSpinBox" name="Age_2">
-        <property name="minimum">
-         <number>12</number>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </item>
-    <item>
-     <layout class="QHBoxLayout" name="horizontalLayout_11">
-      <item>
-       <widget class="QLabel" name="label_11">
-        <property name="text">
-         <string>Gender</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QRadioButton" name="Male_2">
-        <property name="text">
-         <string>Male</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QRadioButton" name="Female_2">
-        <property name="text">
-         <string>Female</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </item>
-    <item>
-     <layout class="QHBoxLayout" name="horizontalLayout_12">
-      <item>
-       <widget class="QLabel" name="label_12">
-        <property name="text">
-         <string>Confirm Password</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLineEdit" name="Password_2">
-        <property name="maximumSize">
-         <size>
-          <width>437</width>
           <height>16777215</height>
          </size>
         </property>
@@ -304,9 +267,9 @@
      </layout>
     </item>
     <item>
-     <widget class="QPushButton" name="Register_4">
+     <widget class="QPushButton" name="pwdchange">
       <property name="text">
-       <string>Confirm</string>
+       <string>Confirm Password Change</string>
       </property>
      </widget>
     </item>
