--- a/In4B00king/movielist.ui
+++ b/In4B00king/movielist.ui
@@ -290,6 +290,45 @@
      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;right&quot;&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
    </widget>
+   <widget class="QLabel" name="test">
+    <property name="geometry">
+     <rect>
+      <x>630</x>
+      <y>40</y>
+      <width>47</width>
+      <height>13</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="editmovie">
+    <property name="geometry">
+     <rect>
+      <x>720</x>
+      <y>40</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Edit Movies</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="logout">
+    <property name="geometry">
+     <rect>
+      <x>720</x>
+      <y>10</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Log out</string>
+    </property>
+   </widget>
    <zorder>Background</zorder>
    <zorder>Movie_List</zorder>
    <zorder>List_Of_Movies</zorder>
@@ -298,6 +337,9 @@
    <zorder>Select_Button2</zorder>
    <zorder>Select_Button3</zorder>
    <zorder>profile</zorder>
+   <zorder>test</zorder>
+   <zorder>editmovie</zorder>
+   <zorder>logout</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
