Added Forget Password Email Verification

--- a/In4B00king/forgetpassword.ui
+++ b/In4B00king/forgetpassword.ui
@@ -66,7 +66,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="resetpassword_2">
+       <widget class="QPushButton" name="verifyButton">
         <property name="text">
          <string>Verify</string>
         </property>
@@ -131,6 +131,9 @@
     </item>
     <item>
      <widget class="QPushButton" name="resetpassword">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
       <property name="text">
        <string>Confirm</string>
       </property>
