Update movies & halls
1. movies.cpp integrated with e-ken's movielist.cpp
2. movies.cpp dynamically integrated with database
3. rearranged funcs for movies.cpp
4. cleaned up movies.h
5. halls.h specified some seats to be either handicap or broken

--- a/In4B00king/resources.qrc
+++ b/In4B00king/resources.qrc
@@ -10,5 +10,7 @@
         <file>img/FF9.jpg</file>
         <file>img/Tom_and_Jerry.jpg</file>
         <file>img/Godzilla_Vs_Kong.jpg</file>
+        <file>img/Chaos_Walking.png</file>
+        <file>img/Mortal_Kombat.jpg</file>
     </qresource>
 </RCC>
