Moved Email Verification to its individual Class

--- a/In4B00king/forgetpassword.ui
+++ b/In4B00king/forgetpassword.ui
@@ -67,6 +67,9 @@
       </item>
       <item>
        <widget class="QPushButton" name="verifyButton">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
         <property name="text">
          <string>Verify</string>
         </property>
