--- a/In4B00king/register.ui
+++ b/In4B00king/register.ui
@@ -186,6 +186,12 @@
       <item>
        <widget class="QSpinBox" name="Age">
         <property name="minimum">
+         <number>0</number>
+        </property>
+        <property name="maximum">
+         <number>100</number>
+        </property>
+        <property name="value">
          <number>12</number>
         </property>
        </widget>
