--- a/In4B00king/forgetpassword.ui
+++ b/In4B00king/forgetpassword.ui
@@ -1,29 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Register</class>
- <widget class="QDialog" name="Register">
+ <class>forgetpassword</class>
+ <widget class="QDialog" name="forgetpassword">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>382</width>
-    <height>396</height>
+    <width>366</width>
+    <height>381</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Register</string>
+   <string>Dialog</string>
   </property>
   <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>10</y>
+     <x>0</x>
+     <y>0</y>
      <width>361</width>
      <height>381</height>
     </rect>
    </property>
    <property name="title">
-    <string>Register Account</string>
+    <string>Forget Password</string>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
@@ -51,9 +51,9 @@
      </layout>
     </item>
     <item>
-     <layout class="QHBoxLayout" name="horizontalLayout_8">
+     <layout class="QHBoxLayout" name="horizontalLayout_3">
       <item>
-       <widget class="QLineEdit" name="verificationcode">
+       <widget class="QLineEdit" name="verify">
         <property name="maximumSize">
          <size>
           <width>459</width>
@@ -66,7 +66,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="verify">
+       <widget class="QPushButton" name="verifyButton">
         <property name="enabled">
          <bool>false</bool>
         </property>
@@ -76,7 +76,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="sendemail">
+       <widget class="QPushButton" name="resetpassword_3">
         <property name="text">
          <string>Send Email</string>
         </property>
@@ -89,12 +89,12 @@
       <item>
        <widget class="QLabel" name="label_2">
         <property name="text">
-         <string>Password</string>
+         <string>New password</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QLineEdit" name="Password">
+       <widget class="QLineEdit" name="pwd">
         <property name="maximumSize">
          <size>
           <width>437</width>
@@ -118,7 +118,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QLineEdit" name="Password_2">
+       <widget class="QLineEdit" name="pwd2">
         <property name="maximumSize">
          <size>
           <width>437</width>
@@ -133,105 +133,17 @@
      </layout>
     </item>
     <item>
-     <layout class="QHBoxLayout" name="horizontalLayout_3">
-      <item>
-       <widget class="QLabel" name="label_7">
-        <property name="text">
-         <string>First Name</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLineEdit" name="Fname">
-        <property name="maximumSize">
-         <size>
-          <width>432</width>
-          <height>16777215</height>
-         </size>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </item>
-    <item>
-     <layout class="QHBoxLayout" name="horizontalLayout_4">
-      <item>
-       <widget class="QLabel" name="label_3">
-        <property name="text">
-         <string>Last Name</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLineEdit" name="Lname">
-        <property name="maximumSize">
-         <size>
-          <width>433</width>
-          <height>16777215</height>
-         </size>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </item>
-    <item>
-     <layout class="QHBoxLayout" name="horizontalLayout_5">
-      <item>
-       <widget class="QLabel" name="label_4">
-        <property name="text">
-         <string>Age</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QSpinBox" name="Age">
-        <property name="minimum">
-         <number>0</number>
-        </property>
-        <property name="maximum">
-         <number>100</number>
-        </property>
-        <property name="value">
-         <number>12</number>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </item>
-    <item>
-     <layout class="QHBoxLayout" name="horizontalLayout_6">
-      <item>
-       <widget class="QLabel" name="label_5">
-        <property name="text">
-         <string>Gender</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QRadioButton" name="Male">
-        <property name="text">
-         <string>Male</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QRadioButton" name="Female">
-        <property name="text">
-         <string>Female</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </item>
-    <item>
-     <widget class="QPushButton" name="Register_2">
+     <widget class="QPushButton" name="resetpassword">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
       <property name="text">
-       <string>Register</string>
+       <string>Confirm</string>
       </property>
      </widget>
     </item>
     <item>
-     <widget class="QPushButton" name="Close">
+     <widget class="QPushButton" name="HomePage">
       <property name="text">
        <string>Close</string>
       </property>
